NOD-419: API per il recupero del file XML -change notify handler
